--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+		<script src="jquery-1.8.2.js" type="text/javascript"></script>
 		<script src="rubiks.js" type="text/javascript"></script>
 	</head>
 	<body>
+		<h1>Rubik's Cube implemented in WebGL</h1>
 		<div>
-			This is a rubik's cube
-			<canvas id="drawingArea" width="200" height="200">
-	
+			By: Matt Buland, John Kelly, and Zach Fleischman
+		</div>
+		<div>
+			<canvas id="glArea" width="500" height="400">
+				Your browser doesn't appear to support the HTML5 <code>&lt;canvas&gt;</code> element.
 			</canvas>
 		</div>
 	</body>
