--- a/index.html
+++ b/index.html
@@ -2,15 +2,21 @@
 <html>
 	<head>
 		<script src="rubiks.js" type="text/javascript"></script>
+		<script src="rubiks.js" id="vs" type="text/javascript">
+			attribute vec4 a_location;
+			uniform vec4 u_transform;
+			
+			void main(){
+				gl_Position = u_transform * a_location;
+			}
+		</script>
+		<script src="rubiks.js" id="fs" type="text/javascript"></script>
 	</head>
 	<body>
-		<h1>Rubik's Cube implemented in WebGL</h1>
 		<div>
-			By: Matt Buland, John Kelly, and Zach Fleischman
-		</div>
-		<div>
-			<canvas id="glArea" width="500" height="400">
-				Your browser doesn't appear to support the HTML5 <code>&lt;canvas&gt;</code> element.
+			This is a rubik's cube
+			<canvas id="drawingArea" width="200" height="200">
+	
 			</canvas>
 		</div>
 	</body>
