--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<script src="rubiks.js" type="text/javascript"></script>
-		<script src="rubiks.js" id="vs" type="text/javascript">
+		<!-- THIS IS TERRIBLE DO NOT DO THIS -->
+		<script id="vs" type="x-shader/x-vertex">
 			attribute vec4 a_location;
 			uniform vec4 u_transform;
 			
@@ -10,7 +10,12 @@
 				gl_Position = u_transform * a_location;
 			}
 		</script>
-		<script src="rubiks.js" id="fs" type="text/javascript"></script>
+		<script id="fs" type="x-shader/x-fragment">
+			void main() {
+			  gl_FragColor = vec4(0,1,0,1);  // green
+			}
+		</script>
+		<script src="rubiks.js" type="text/javascript"></script>
 	</head>
 	<body>
 		<div>
