--- a/index.html
+++ b/index.html
@@ -3,16 +3,22 @@
 	<head>
 		<!-- THIS IS TERRIBLE DO NOT DO THIS -->
 		<script id="vs" type="x-shader/x-vertex">
-			attribute vec4 a_location;
-			uniform vec4 u_transform;
+			attribute mediump  vec3 a_location;
+			attribute mediump  vec4 Vcolor;
+			uniform mediump  mat4 u_transform;
+			
+			varying mediump  vec4 color;
 			
 			void main(){
-				gl_Position = u_transform * a_location;
+				gl_Position = u_transform * vec4(a_location, 1);
+				color = Vcolor;
 			}
 		</script>
-		<script id="fs" type="x-shader/x-fragment">
+		<script id="fs" type="x-shader/x-fragment">			
+			varying mediump  vec4 color;
+			
 			void main() {
-			  gl_FragColor = vec4(0,1,0,1);  // green
+			  gl_FragColor = color;  // green
 			}
 		</script>
 		<script src="rubiks.js" type="text/javascript"></script>
