--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<script src="rubiks.js" type="text/javascript"></script>
+		<script src="js/three.min.js"></script>
 	</head>
 	<body>
 		<div>
