--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+		<script src="three.min.js" type="text/javascript"></script>
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
 		<script src="rubiks.js" type="text/javascript"></script>
-		<script src="js/three.min.js"></script>
 	</head>
 	<body>
+		<div id="attach"></div>
 		<div>
 			This is a rubik's cube
 			<canvas id="drawingArea" width="200" height="200">
