--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 		<script src="three.min.js" type="text/javascript"></script>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
 		<script src="rubiks.js" type="text/javascript"></script>
+		<link href="layout.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
+		<h1>WebGL Rubik's Cude</h1>
+
 		<div id="attach"></div>
-		<div>
-			This is a rubik's cube
-		</div>
+		<button type="button" id="shuffle">Shuffle Cube</button>
 	</body>
 </html>
