Linked keyboard with rotations of the cube. Missing: Camera, and relative rotation

--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
 
 		<div id="attach"></div>
 		<button type="button" id="shuffle">Shuffle Cube</button>
+		<button type="button" id="camUp">Camera Up</button>
+		<button type="button" id="camDown">Camera Down</button>
+		<button type="button" id="camUp">Camera Up</button>
+		<button type="button" id="camUp">Camera Up</button>
+
 	</body>
 </html>
