Added virtual keys

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
 		<div id="attach"></div>
 		<button type="button" id="shuffle">Shuffle Cube</button>
+		<div id="slider">
+			1<input id="speed" type="range" min="1" max="20" step="1" value="10" onchange="updateSlider(this.value)" />20
+		</div><br/>
 		<table border="1" id="virtualKeyboard" >
 			<tr>
 				<td>Horizontal: </td>
