--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+		<meta charset="UTF-8">
+		<title>JZM Rubik's Cube</title>
 		<script src="three.min.js" type="text/javascript"></script>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
 		<script src="rubiks.js" type="text/javascript"></script>
@@ -11,9 +13,7 @@
 
 		<div id="attach"></div>
 		<button type="button" id="shuffle">Shuffle Cube</button>
-		<div id="slider">
-			1<input id="speed" type="range" min="1" max="20" step="1" value="10" onchange="updateSlider(this.value)" />20
-		</div><br/>
+		Number of random moves to perform: <input type="number" name="numRandMove" min="1" value="20" id="numRand">
 		<table border="1" id="virtualKeyboard" >
 			<tr>
 				<td>Horizontal: </td>
