Tweaked CSS. Fixed typo.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link href="layout.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
-		<h1>WebGL Rubik's Cude</h1>
+		<h1>WebGL Rubik's Cube</h1>
 
 		<div id="attach"></div>
 		<button type="button" id="shuffle">Shuffle Cube</button>
