Changed cursors back. Added a footnote about using firefox.

--- a/index.html
+++ b/index.html
@@ -56,5 +56,8 @@
 			</tr>
 		</table>
 
+	<div id="footnote">
+		<p>For best results, use Firefox to view this webpage.</p>
+	</div>
 	</body>
 </html>
